# velib-harvester

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
app/flows/: __init__.py  flow.py  flow2.py
app/models/: __init__.py  station_information.py  station_status.py
tests/models/: test_station_information.py  test_station_status.py
